[tool.poetry]
name = "hall-generator"
version = "0.1.0"
description = "Used to generate an experiment log for a student laboratory work consisting of measuring the Hall coefficient."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
matplotlib = "^3.2.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
